fixed alignment

--- a/frontend_react/src/container/Testimonial/Testimonial.scss
+++ b/frontend_react/src/container/Testimonial/Testimonial.scss
@@ -20,6 +20,12 @@
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
+
+    @media screen and (max-width: 850px) {
+      width: 100px;
+      height: 100px;
+      
+      }
   }
 
   h4 {
@@ -79,7 +85,7 @@
   align-items: center;
 
 
-  margin: 0 1rem 1rem;
+  margin: 0 1rem;
   transition: all 0.3s ease-in-out;
   
 
